fixed some porting issues